GBL-3503 -- а если взять в кавычки, потому что пробелы

--- a/antora.yml
+++ b/antora.yml
@@ -12,7 +12,7 @@ nav:
 ext:
   collector:
     run:
-      command: node build-index.js
+      command: "node build-index.js"
     scan:
       dir: docs
       files: '*.html'
