--- a/antora.yml
+++ b/antora.yml
@@ -15,11 +15,7 @@ ext:
       command: ""
     scan:
     - dir: docs/
-    - dir: docs/modules
-    - dir: docs/interfaces
-    - dir: docs/enums
-    - dir: docs/classes
-      files: '*.html'
+      files: '**/*.html'
       into: modules/ROOT/attachments
 
 #  start_page: ROOT:index.adoc
