GBL-3503 -- не понимаю, как надо задавать файлы

--- a/antora.yml
+++ b/antora.yml
@@ -15,7 +15,7 @@ ext:
       command: ""
     scan:
     - dir: 'docs/**/'
-      files: '*.html'
+      files: '**/*.html'
       into: modules/ROOT/attachments
 
 #  start_page: ROOT:index.adoc
