--- a/antora.yml
+++ b/antora.yml
@@ -14,7 +14,7 @@ ext:
     run:
       command: ""
     scan:
-#      dir: ./
+      dir: ./docs
       files: '**/*.html'
       into: modules/ROOT/attachments
 
